codepkg/objects/Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <label>Total_Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Discount__c</fullName>
        <label>Total_Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Transaction_Count__c</fullName>
        <label>Transaction_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Cost__c</columns>
        <columns>Total_Discount__c</columns>
        <columns>Transaction_Count__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
    </listViews>
    <nameField>
        <label>Transaction</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>